--- a/package.json
+++ b/package.json
@@ -9,17 +9,13 @@
   "author": "Nada Sadek",
   "license": "ISC",
   "dependencies": {
-    "chai": "^4.1.2",
     "express": "^4.16.2",
-    "mocha": "^4.1.0",
     "mongodb": "^3.0.1",
     "mongoose": "^4.13.9",
     "node": "^9.4.0",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.4",
-    "pug-bootstrap": "0.0.15",
-    "sinon": "^4.1.5",
-    "sinon-mongoose": "^2.0.2"
+    "pug-bootstrap": "0.0.15"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
