--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "mongodb": "^3.0.1",
     "mongoose": "^4.13.9",
     "node": "^9.4.0",
-    "path": "^0.12.7",
-    "pug": "^2.0.0-rc.4",
-    "pug-bootstrap": "0.0.15"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
