--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
+    "moment": "^2.20.1",
     "mongodb": "^3.0.1",
     "mongoose": "^4.13.9",
     "node": "^9.4.0",
